--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang='ja'>
   <head>
-    <meta charset='utf-8' />
-    <meta content='width=device-width, initial-scale=1.0, user-scalable=yes' name='viewport' />
+    <meta charset='utf-8'>
+    <meta content='width=device-width, initial-scale=1.0, user-scalable=yes' name='viewport'>
     <title>Rails寺子屋</title>
-    <link href='src/assets/bootstrap/css/bootstrap.css' rel='stylesheet' />
-    <link href='src/assets/fontawesome/css/font-awesome.css' rel='stylesheet' />
-    <link href='style.css' rel='stylesheet' />
-    <meta content='website' property='og:type' />
-    <meta content='http://rails.terakoya.io/' property='og:url' />
-    <meta content='Rails寺子屋' property='og:title' />
-    <meta content='Rails寺子屋' property='og:site_name' />
-    <meta content='Rails寺子屋はWebアプリを作るための強力なツール&amp;quot;Ruby on Rails&amp;quot;を使ってWebアプリ作りを実践しながら学ぶイベントです。' property='og:description' />
-    <meta content='http://rails.terakoya.io/src/assets/images/ogp_logo.png' property='og:image' />
+    <link href='src/assets/bootstrap/css/bootstrap.css' rel='stylesheet'>
+    <link href='src/assets/fontawesome/css/font-awesome.css' rel='stylesheet'>
+    <link href='style.css' rel='stylesheet'>
+    <meta content='website' property='og:type'>
+    <meta content='http://rails.terakoya.io/' property='og:url'>
+    <meta content='Rails寺子屋' property='og:title'>
+    <meta content='Rails寺子屋' property='og:site_name'>
+    <meta content='Rails寺子屋はWebアプリを作るための強力なツール&amp;quot;Ruby on Rails&amp;quot;を使ってWebアプリ作りを実践しながら学ぶイベントです。' property='og:description'>
+    <meta content='http://rails.terakoya.io/src/assets/images/ogp_logo.png' property='og:image'>
   </head>
   <body>
     <header>
       <div class='container'>
         <h1 class='logo'></h1>
-        <img src='src/assets/images/logo.png' />
+        <img src='src/assets/images/logo.png'>
       </div>
     </header>
     <div class='container'>
@@ -32,7 +32,7 @@
           </h3>
           <p>
             Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
-            <br />
+            <br>
             本イベントはRails寺子屋と
             <a href='http://kosenconf.jp/'>
               高専カンファレンス
@@ -61,11 +61,11 @@
                   <strong>株式会社オプティム</strong>
                 </a>
                 <a href='http://www.optim.co.jp/access'>(アクセス)</a>
-                <br />
+                <br>
                 <a href='http://g.co/maps/t382x'>大きな地図で見る</a>
-                <br />
+                <br>
                 <span class='address'>東京都港区港南1丁目6−34 品川イースト1階 (受付)</span>
-                <br />
+                <br>
                 <span>最寄り駅: JR品川駅</span>
               </address>
             </div>
@@ -84,7 +84,7 @@
             <div class='equipment'>
               <p>
                 お弁当とPCを持参してください。
-                <br />
+                <br>
                 詳しくは2月17日に送りましたメールを御覧ください。
               </p>
             </div>
@@ -151,7 +151,7 @@
         <div class='courses clearfix'>
           <div class='course'>
             <h3>
-              <img class='shadow tsubomi' src='src/assets/images/tsubomi.png' />
+              <img class='shadow tsubomi' src='src/assets/images/tsubomi.png'>
               蕾組
             </h3>
             <description>
@@ -160,7 +160,7 @@
           </div>
           <div class='course'>
             <h3>
-              <img class='shadow hana' src='src/assets/images/hana.png' />
+              <img class='shadow hana' src='src/assets/images/hana.png'>
               華組
             </h3>
             <description>
@@ -169,7 +169,7 @@
           </div>
           <div class='course'>
             <h3>
-              <img class='shadow hikari' src='src/assets/images/hikari.png' />
+              <img class='shadow hikari' src='src/assets/images/hikari.png'>
               光組
             </h3>
             <description>
@@ -183,7 +183,7 @@
         <div class='masters clearfix'>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg' width='75'>
             </div>
             <div class='name'>
               五十嵐 邦明 @igaiga555
@@ -211,7 +211,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg' width='75'>
             </div>
             <div class='name'>
               村田 賢太 @mrkn
@@ -239,7 +239,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg' width='75'>
             </div>
             <div class='name'>
               大和田 純 @june29
@@ -272,7 +272,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/1465459377/5494314_707716410.jpg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1465459377/5494314_707716410.jpg' width='75'>
             </div>
             <div class='name'>
               西嶋 悠貴 @yuki24
@@ -300,7 +300,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png' width='75'>
             </div>
             <div class='name'>
               佐々木 佳祐 @RooandQoo
@@ -328,7 +328,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg' width='75'>
             </div>
             <div class='name'>
               三浦 彩 @mitaku
@@ -356,7 +356,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png' width='75'>
             </div>
             <div class='name'>
               藤原 裕也 @asonas
@@ -389,7 +389,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/3022880518/d4a92c61fdb0ee77fb6d29ed644581b7_bigger.png' width='75' />
+              <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/3022880518/d4a92c61fdb0ee77fb6d29ed644581b7_bigger.png' width='75'>
             </div>
             <div class='name'>
               そらは @sora_h
@@ -417,7 +417,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg' width='75' />
+              <img class='shadow' src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg' width='75'>
             </div>
             <div class='name'>
               本多 展幸 @nobyuki
@@ -445,7 +445,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png' width='75' />
+              <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png' width='75'>
             </div>
             <div class='name'>
               青山 昂平 @_a__san
@@ -469,9 +469,9 @@
             </ul>
             <div class='description'>
               福井工業高等専門学校 電子情報工学科を飛び出してそのまま上京してきたプログラマーっぽい人
-              <br />
+              <br>
               自称ゆるふわガチ勢
-              <br />
+              <br>
               こわい人こわいです
             </div>
           </div>
@@ -505,16 +505,16 @@
           </div>
           <div class='master last'>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/1491871238/kengo05_bigger.png' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1491871238/kengo05_bigger.png' width='75'>
             </div>
             <div class='name'>
               濱崎 健吾 @hmsk
             </div>
             <ul class='clearfix'>
               <li>
-              <a class='link' href='http://twitter.com/hmsk'>
-                <i class='icon-twitter'></i>
-              </a>
+                <a class='link' href='http://twitter.com/hmsk'>
+                  <i class='icon-twitter'></i>
+                </a>
               </li>
             </ul>
             <div class='description'>
@@ -531,7 +531,7 @@
               題字
             </span>
             <div class='icon'>
-              <img class='shadow' src='https://si0.twimg.com/profile_images/1720785107/my_bigger.png' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1720785107/my_bigger.png' width='75'>
             </div>
             <div class='name'>
               さいとうかずよし
@@ -549,7 +549,7 @@
               絵師
             </span>
             <div class='icon'>
-              <img class='shadow' src='http://a0.twimg.com/profile_images/3049823344/b89478d5d99dbaee208000b505c5677c.png' width='75' />
+              <img class='shadow' src='http://a0.twimg.com/profile_images/3049823344/b89478d5d99dbaee208000b505c5677c.png' width='75'>
             </div>
             <div class='name'>
               あらなぎ
