--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0, user-scalable=yes' name='viewport'>
     <title>Rails寺子屋</title>
-    <link href='src/assets/bootstrap/css/bootstrap.css' rel='stylesheet'>
-    <link href='src/assets/fontawesome/css/font-awesome.css' rel='stylesheet'>
+    <link href='/src/assets/bootstrap/css/bootstrap.css' rel='stylesheet'>
+    <link href='/src/assets/fontawesome/css/font-awesome.css' rel='stylesheet'>
     <link href='style.css' rel='stylesheet'>
     <meta content='website' property='og:type'>
     <meta content='http://rails.terakoya.io/' property='og:url'>
@@ -18,7 +18,7 @@
     <header>
       <div class='container'>
         <h1 class='logo'></h1>
-        <img src='src/assets/images/logo.png'>
+        <img src='/src/assets/images/logo.png'>
       </div>
     </header>
     <div class='container'>
@@ -43,9 +43,9 @@
             <h4>
               日時
             </h4>
-            <p>
-              2013/3/23(土) 10:00 開始 (9:30分開場)
-            </p>
+            <strong>
+              2013/8/3(土)
+            </strong>
             <h4>
               参加対象者
             </h4>
@@ -57,16 +57,16 @@
             </h4>
             <div id='venue'>
               <address>
-                <a href='http://www.optim.co.jp/'>
-                  <strong>株式会社オプティム</strong>
+                <a href='http://www.pixiv.co.jp/'>
+                  <strong>ピクシブ株式会社</strong>
                 </a>
-                <a href='http://www.optim.co.jp/access'>(アクセス)</a>
+                <a href='http://www.pixiv.co.jp/company/'>(アクセス)</a>
                 <br>
-                <a href='http://g.co/maps/t382x'>大きな地図で見る</a>
+                <a href='http://goo.gl/maps/gn3xd'>大きな地図で見る</a>
                 <br>
-                <span class='address'>東京都港区港南1丁目6−34 品川イースト1階 (受付)</span>
+                <span class='address'>東京都渋谷区千駄ヶ谷4-23-5 JPR千駄ヶ谷ビル5F</span>
                 <br>
-                <span>最寄り駅: JR品川駅</span>
+                <span>最寄り駅: JR千駄ヶ谷駅</span>
               </address>
             </div>
             <div id='map'></div>
@@ -76,105 +76,53 @@
               参加登録
             </h4>
             <p>
-              <span>参加応募は〆切ました。予定数を上回る参加応募をいただきました。選考を行いまして、結果を2/23までにご連絡いたします。</span>
+              <span>後日連絡します。</span>
             </p>
             <h4>
               当日の持ち物
             </h4>
             <div class='equipment'>
               <p>
-                お弁当とPCを持参してください。
-                <br>
-                詳しくは2月17日に送りましたメールを御覧ください。
+                後日連絡します。
               </p>
             </div>
             <h4>
               時間割
             </h4>
             <div class='time-table'>
-              <table class='table table-striped'>
-                <tr>
-                  <td>
-                    9:30
-                  </td>
-                  <td>
-                    開場
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    10:00 - 12:00
-                  </td>
-                  <td>
-                    環境構築
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    12:00 - 13:00
-                  </td>
-                  <td>
-                    ランチ
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    13:00 - 17:00
-                  </td>
-                  <td>
-                    ワークショップ
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    17:00 - 19:00
-                  </td>
-                  <td>
-                    懇親会
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    19:00
-                  </td>
-                  <td>
-                    解散
-                  </td>
-                </tr>
-              </table>
+              後日連絡します。
+              <!-- %table.table.table-striped -->
+              <!-- %tr -->
+              <!-- %td -->
+              <!-- 9:30 -->
+              <!-- %td -->
+              <!-- 開場 -->
+              <!-- %tr -->
+              <!-- %td -->
+              <!-- 10:00 - 12:00 -->
+              <!-- %td -->
+              <!-- 環境構築 -->
+              <!-- %tr -->
+              <!-- %td -->
+              <!-- 12:00 - 13:00 -->
+              <!-- %td -->
+              <!-- ランチ -->
+              <!-- %tr -->
+              <!-- %td -->
+              <!-- 13:00 - 17:00 -->
+              <!-- %td -->
+              <!-- ワークショップ -->
+              <!-- %tr -->
+              <!-- %td -->
+              <!-- 17:00 - 19:00 -->
+              <!-- %td -->
+              <!-- 懇親会 -->
+              <!-- %tr -->
+              <!-- %td -->
+              <!-- 19:00 -->
+              <!-- %td -->
+              <!-- 解散 -->
             </div>
-          </div>
-        </div>
-        <h2>
-          コースについて
-        </h2>
-        <div class='courses clearfix'>
-          <div class='course'>
-            <h3>
-              <img class='shadow tsubomi' src='src/assets/images/tsubomi.png'>
-              蕾組
-            </h3>
-            <description>
-              Rails未経験者向けのコースです。Rubyやその他の言語でのプログラミング経験は問いません。Railsでかんたんなアプリを作ります。
-            </description>
-          </div>
-          <div class='course'>
-            <h3>
-              <img class='shadow hana' src='src/assets/images/hana.png'>
-              華組
-            </h3>
-            <description>
-              Rails経験者向けのコースです。Rails の技量を高めたい方のコースです。コーチと一緒に課題となるRailsアプリを考え、作ります。
-            </description>
-          </div>
-          <div class='course'>
-            <h3>
-              <img class='shadow hikari' src='src/assets/images/hikari.png'>
-              光組
-            </h3>
-            <description>
-              教職員向けのコースです。内容は蕾組と同程度を予定しています。
-            </description>
           </div>
         </div>
         <h2>
@@ -592,9 +540,9 @@
       </footer>
     </div>
   </body>
-  <script src='src/assets/jquery-1.8.3.min.js'></script>
-  <script src='src/assets/bootstrap/js/bootstrap.min.js'></script>
+  <script src='/src/assets/jquery-1.8.3.min.js'></script>
+  <script src='/src/assets/bootstrap/js/bootstrap.min.js'></script>
   <script src='https://maps.google.com/maps/api/js?sensor=true'></script>
-  <script src='src/assets/gmaps.js'></script>
-  <script src='src/assets/app.js'></script>
+  <script src='/src/assets/gmaps.js'></script>
+  <script src='/src/assets/app.js'></script>
 </html>
