Add archive link

--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
           </div>
         </div>
         <h2>
+          過去の開催
+        </h2>
+        <div class='archives'>
+          <ul>
+            <li>
+              <a href='/archives/1.html'>
+                Rails寺子屋 x kosenconf 第1回
+              </a>
+            </li>
+          </ul>
+        </div>
+        <h2>
           師範(コーチ)
         </h2>
         <div class='masters clearfix'>
