--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               日時
             </h4>
             <strong>
-              2013/8/3(土)
+              2013/8/3(土) 10:00 開始 (9:30分開場)
             </strong>
             <h4>
               参加対象者
