Update the nearest station

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <br>
                 <span class='address'>東京都渋谷区千駄ヶ谷4-23-5 JPR千駄ヶ谷ビル5F</span>
                 <br>
-                <span>最寄り駅: JR千駄ヶ谷駅</span>
+                <span>最寄り駅: JR代々木駅</span>
               </address>
             </div>
             <div id='map'></div>
