--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0, user-scalable=yes' name='viewport'>
-    <title>Rails寺子屋</title>
+    <title>Rails寺子屋第2回</title>
     <link href='/src/assets/bootstrap/css/bootstrap.css' rel='stylesheet'>
     <link href='/src/assets/fontawesome/css/font-awesome.css' rel='stylesheet'>
     <link href='style.css' rel='stylesheet'>
