--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             </a>
             の合同イベントです。
           </p>
+          <h3>
+            第2回 開催情報
+          </h3>
           <div class='left-box'>
             <h4>
               日時
