--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
               参加登録
             </h4>
             <p>
-              <span>後日連絡します。</span>
+              <a href='https://docs.google.com/spreadsheet/viewform?formkey=dFByeVRuU2swWllXbTV6RF9SQ3UwaVE6MA#gid=2' target='_blank'>
+                <button class='btn submit-btn'>
+                  参加登録フォームへ
+                </button>
+              </a>
             </p>
             <h4>
               当日の持ち物
