--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href='/src/assets/bootstrap/css/bootstrap.css' rel='stylesheet'>
     <link href='/src/assets/fontawesome/css/font-awesome.css' rel='stylesheet'>
     <link href='style.css' rel='stylesheet'>
+    <script>
+      var lat = 35.680903;
+      var lng = 139.706761;
+    </script>
     <meta content='website' property='og:type'>
     <meta content='http://rails.terakoya.io/' property='og:url'>
     <meta content='Rails寺子屋' property='og:title'>
